[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/white.png" type="Texture" id=1]
[ext_resource path="res://Elements/Checkpoint.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 93 )

[sub_resource type="Curve" id=4]
max_value = 100.0
_data = [ Vector2( 0.272727, 60 ), 0.0, 0.0, 0, 0, Vector2( 1, 100 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.771863, 0.870722 )
colors = PoolColorArray( 1, 0.988235, 0.266667, 1, 1, 0.988235, 0.203922, 0.796078, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.0109091, 0.0472727, 0.803636, 1 )
colors = PoolColorArray( 1, 1, 0.266667, 0.494118, 1, 1, 0.266667, 1, 1, 1, 0.266667, 1, 1, 1, 0.235294, 0 )

[node name="Checkpoint" type="Area2D" groups=["Checkpoint"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
modulate = Color( 0.521569, 0.54902, 0.227451, 0.670588 )
show_behind_parent = true
scale = Vector2( 17, 184 )
texture = ExtResource( 1 )

[node name="SpawnPos" type="Position2D" parent="CollisionShape2D"]
position = Vector2( 0, 32 )

[node name="TouchParticles" type="CPUParticles2D" parent="CollisionShape2D"]
position = Vector2( 0, -48 )
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
randomness = 0.08
lifetime_randomness = 0.39
local_coords = false
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.7
damping = 100.0
damping_random = 0.11
damping_curve = SubResource( 4 )
scale_amount = 8.0
scale_amount_random = 0.13
color = Color( 1, 1, 0.266667, 0.670588 )
color_ramp = SubResource( 5 )

[node name="ActiveParticles" type="CPUParticles2D" parent="CollisionShape2D"]
position = Vector2( 0, -24 )
emitting = false
amount = 24
lifetime = 3.29
explosiveness = 0.24
randomness = 0.28
lifetime_randomness = 0.15
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 8, 60 )
direction = Vector2( 0, -1 )
spread = 30.0
gravity = Vector2( 0, 12 )
initial_velocity = 50.0
angular_velocity = 128.41
angular_velocity_random = 0.41
linear_accel = -8.92
linear_accel_random = 0.11
scale_amount = 6.0
scale_amount_random = 0.11
color = Color( 1.17647, 1.17647, 0.266667, 0.670588 )
color_ramp = SubResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Checkpoint_body_entered"]
